# opentelemetry-demo

./: ) add per-service Kubernetes manifests and repo tweaks  .cursorrules  .dockerignore  .drone.yml  .env  .env-grafana  .env.arm64  .env.azure  .env.override  .env.sentry.example  .gitattributes  .gitignore  .gitlab-ci.yml  .licenserc.json  .linkspector.yml  .lychee.toml  .markdownlint.yaml  .prettierrc  .service-versions.yaml  .yamlignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_WORKFLOW.md  DEVELOPER_GUIDE.md  ENVIRONMENT_SETUP.md  FORK-SETUP.md  IMAGE-VERIFICATION.md  Jenkinsfile  Jenkinsfile1  Jenkinsfile3  MAINTAINERS.md  Makefile  OIVA-README.md  PRODUCTION-WORKFLOW-GUIDE.md  README-Instana.md  README.md  (+91 more)
.drone/: drone.yml
.github/: .mlc_config.json  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  architecture.md  checks.yml  component_owners.yml  dependabot.yml  frontend.yml  security-insights.yml  zizmor.yml
.sureops/: README.md  service-map.yaml
.sureops-internal/: README.md  chaos-mechanism.md  failure-modes.yaml
Prompt/: 1.Otel-analysis.md  10.sdk-instumentation-design.md  11.sdk-instrumentation-implementation.md  2.analyse-system.md  3.build-application-domains.md  4.categorise-application.md  5.Endpoint-discovery.md  6.identify-critical-path.md  7.slo-analysis.md  8.slo-canaries-design.md  9.slo-canaries-implementation.md  analyse-system.md
Requirements/: Application-Requirements.md  OpenTelemetry-Requirements.md  README.md  System-Requirements.md  architecture-requirements.md
Terraform/: .gitignore  main.tf  variables.tf
adx/: example-queries.kql  schema.kql
alloy/: config.alloy  endpoints-cloud.json  endpoints.json
ansible/: README.md  hosts.yaml  main.yaml
argocd/: application.yaml  signoz-application.yaml
beyla/: config.yaml
chart/: .helmignore  Chart.yaml  README.md  UPGRADING.md  values-sureops.yaml  values.schema.json  values.yaml
ci/: datadog-agent-ddvalues-prod.yaml  datadog-agent-ddvalues-staging.yaml  datadog-agent-values-dd-staging.yaml  datadog-agent-values-dd.yaml  datadog-agent-values-prod.yaml  datadog-agent-values-staging.yaml  datadog-agent-values.yaml  values-dd-ingest-staging.yaml  values-ds-gateway.yaml  values-gateway.yaml  values-ingest-staging.yaml  values-staging.yaml  values.yaml
components/: cart-state-store.yaml
config_files/: alertmanager config.txt  config-values.txt  ebs-policy.txt  failing class.txt  main-alertmanager config.txt  prometheus-config.txt  pvc.txt
dapr/: config.yaml
deploy/: README.md  global.yaml  meta.yaml  sentry-components.yaml
deployment/: argo-deployment.yml
devSql/: init.sql
doc/: CRITICAL_USER_PATHS_ANALYSIS.md  CRITICAL_USER_PATHS_CANARIES_AND_DASHBOARD_IMPLEMENTATION_SUMMARY.md  CRITICAL_USER_PATHS_CANARIES_AND_DASHBOARD_PLAN.md  CRITICAL_USER_PATHS_SDK_INSTRUMENTATION_IMPLEMENTATION_SUMMARY.md  CRITICAL_USER_PATHS_SDK_INSTRUMENTATION_PLAN.md  CRITICAL_USER_PATHS_SLO.md  CRITICAL_USER_PATHS_repos.csv  application-domian-overview.md  application-overview.md  application_categorisation.csv  application_categorisation_summary.md  endpoint.csv  endpoint_summary.md
docs/: ALERTING.md  APM_DATABASE_LOG_CORRELATION.md  AZURE_DEPLOYMENT.md  INTEGRATE_YOUR_SERVICES.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  architecture.md  cloudshell-tutorial.md  current_architecture.md  cymbal-shops.md  delivery.md  demo_features  demo_features.md  demo_screenshots.md  development-guide.md  development-principles.md  development.md  docker-deployment.md  docker_deployment.md  feature_flags.md  forking.md  gcp-instrumentation.md  index.md  kubernetes_deployment.md  manual_span_attributes.md  memorystore.md  metric_service_features.md  service-mesh.md  service_table.md  sureops-getting-started.md  tests.md  trace_service_features.md  v1Graph.md  v1_graph.md  workload-identity.md
dynatrace/: Dockerfile.checkout  Dockerfile.frontend  Dockerfile.loadgenerator  Dockerfile.payment  Dockerfile.postgres  Dockerfile.productcatalog  init.sql  locustfile.py  people.json
edmm/: otel_store_k8s_translated.yaml
eks/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
eks_cluster_creation_using_terraform/: .gitignore  main.tf  outputs.tf  variables.tf
getting-started/: docker_deployment.md
gothing/: README.md  my-values-file.yml  otel-configmap.yaml.example  values.yaml
hack/: build-and-run.sh  kill-containers.sh
helm/: flagd_override_values.yaml  frontend_service.yaml  recommendation_service_values.yaml  values.yaml
helm-chart/: Chart.yaml  README.md  UPGRADING.md  values.schema.json  values.yaml
incidentfox/: .gitignore  AGENT-DEV-GUIDE.md  CODE-TOUR.md  DEPLOYMENT-STATUS.md  DEPLOYMENT.md  README.md  SOC2-COMPLIANCE-REPORT.md  build-all.sh
instana/: README.md  TODO  buid-deploy.md  customizations.md  deploy-build.md  troubleshooting.md  values-instana-agent.yaml
instana-agent/: configuration-otel.yaml  configuration.yaml  docker-compose.yml
src/currency/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  currency-k8s.yaml
src/currency/genproto/: CMakeLists.txt  Dockerfile
src/currency/src/: logger_common.h  server.cpp  tracer_common.h
src/genai-sql-agent/: Dockerfile  agent.py  patched_vertexai.py  pyproject.toml  streamlit_helpers.py
src/shipping/: Cargo.toml  Dockerfile  README.md  build.rs  shipping-k8s.yaml
src/shipping/src/: health_check.rs  healthcheck.rs  main.rs  shipping_service.rs  telemetry_conf.rs
src/shipping/src/shipping_service/: feature_flag.rs  quote.rs  shipping_types.rs
src/shipping/src/telemetry/: logs_conf.rs  traces_conf.rs
src/shippingservice/: Cargo.toml  Dockerfile  README.md  backstage.yaml  build.rs  genproto.sh  go.mod  go.sum  main.go  shippingservice_test.go
src/shippingservice/.cargo/: config.toml
src/shippingservice/src/: health_service.rs  main.rs  server.rs  shipping_service.rs  telemetry.rs
src/shippingservice/src/shipping_service/: quote.rs  tracking.rs
src/shippingservice/src/telemetry/: logs_conf.rs  metrics_conf.rs  resources_conf.rs  traces_conf.rs
(+2581 files in other folders)
