# Copyright The OpenTelemetry Authors
# SPDX-License-Identifier: Apache-2.0
[project]
name = "genai-sql-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community>=0.3.16",
    "langchain-core>=0.3.31",
    "langchain-google-vertexai>=2.0.7",
    "langgraph>0.2.27",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-gcp-logging>=1.9.0a0",
    "opentelemetry-exporter-gcp-trace>=1.8.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29.0",
    "opentelemetry-instrumentation-aiohttp-client>=0.50b0",
    "opentelemetry-instrumentation-httpx>=0.50b0",
    "opentelemetry-instrumentation-requests>=0.50b0",
    "opentelemetry-instrumentation-sqlite3>=0.51b0",
    "opentelemetry-instrumentation-urllib>=0.50b0",
    "opentelemetry-instrumentation-urllib3>=0.50b0",
    "opentelemetry-instrumentation-vertexai>=2.0b0",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = ["ipython>=8.18.1", "ruff>=0.9.2"]
