[package]
name = "shipping"
edition = "2021"

[[bin]]
name = "shipping"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
awc = { version = "3.7.0", default-features = false, features = ["compress-zstd"] }
log = { version = "0.4.27", features = ["kv"] }
serde = { version = "1.0.219", features = ["derive"] }
tonic = "0.12.3"

actix-web-opentelemetry = { version = "0.22.0", features = ["sync-middleware", "awc"] }
opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["metrics", "logs"]}
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic", "trace", "metrics", "logs"] }
opentelemetry-appender-log = "0.29.0"
opentelemetry-resource-detectors = "0.8.0"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
