[package]
name = "shipping"
edition = "2021"

[[bin]]
name = "shipping"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.98"
awc = { version = "3.7.0", default-features = false, features = ["compress-zstd"] }
serde = { version = "1.0.219", features = ["derive"] }
tonic = "0.14.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

opentelemetry = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-instrumentation-actix-web = { version = "0.22.0", features = ["sync-middleware", "awc", "metrics"] }
opentelemetry-appender-tracing = "0.30.1"
opentelemetry-resource-detectors = "0.9.0"

[dependencies.uuid]
version = "1.17.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
