

[package]
name = "shippingservice"
version = "1.4.0"
edition = "2021"

[[bin]]
name = "shippingservice"
path = "src/main.rs"

[features]
dockerproto = [] # compile in docker or not

[dependencies]
tonic = "0.10"
tonic-health = "0.10.2"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = {version = "0.21", features = ["rt-tokio"]}
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-http = "0.10.0"
opentelemetry-otlp = "0.14.0"
log = "0.4.20"
simplelog = "0.12"
reqwest-middleware = "0.2.4"
reqwest-tracing = { version = "0.4.6", features = ["opentelemetry_0_20"] }
tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3"
time = "0.3.17"
rand = "0.8.5"

[dependencies.uuid]
version = "1.5.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.10"
