

[package]
name = "shippingservice"
edition = "2021"

[[bin]]
name = "shippingservice"
path = "src/main.rs"

[features]
dockerproto = [] # compile in docker or not

[dependencies]
tonic = "0.12"
tonic-health = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["charset", "json"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-appender-tracing = "=0.4.0"
opentelemetry-resource-detectors = "=0.2.0"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"]}
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry-http = "0.12.0"
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
log = "0.4.22"
simplelog = "0.12"
reqwest-middleware = { version = "0.3.2", features = ["json"] }
reqwest-tracing = { version = "0.5.2", features = ["opentelemetry_0_23"] }
tracing = "0.1"
tracing-opentelemetry = "0.24.0"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
tonic-build = "0.12"
